api/portal/kubernetes/otel-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f ./../docker/docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: otel-collector
  name: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: otel-collector
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f ./../docker/docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/docker-monitoring-network: "true"
        io.kompose.service: otel-collector
    spec:
      containers:
        - image: otel/opentelemetry-collector:latest
          name: otel-collector
          ports:
            - containerPort: 4317
            - containerPort: 55678
          resources: {}
          volumeMounts:
            - mountPath: /etc/otel-collector-config.yaml
              name: otel-collector-claim0
      restartPolicy: Always
      volumes:
        - name: otel-collector-claim0
          persistentVolumeClaim:
            claimName: otel-collector-claim0
status: {}
