api/portal/kubernetes/otel-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f ./../docker/docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: otel-collector
  name: otel-collector
spec:
  ports:
    - name: "4317"
      port: 4317
      targetPort: 4317
    - name: "55678"
      port: 55678
      targetPort: 55678
  selector:
    io.kompose.service: otel-collector
status:
  loadBalancer: {}
